# conservation-prioritization

./: .gitignore  Makefile  README.md  compose.yml  package.json
.config/: env.docker
.github/workflows/: build.dev.yml  deploy.prod.yml  deploy.test.yml  deploy.yml  uninstall.yml
.husky/: pre-commit
api/: Dockerfile  eslint.config.mjs  package.json  tsconfig.json
api/.docker/: Dockerfile
api/src/: app.ts
api/src/__mocks__/: db.ts
api/src/constants/: database.ts  roles.ts
api/src/database/: db-constants.test.ts  db-constants.ts  db-utils.ts  db.test.ts  db.ts
api/src/errors/: api-error.ts  http-error.ts  (+1 more)
database/: .dockerignore  .gitignore  Dockerfile  eslint.config.mjs  package.json
database/src/: knexfile.ts
frontend/: .dockerignore  .gitignore  .prettierrc  .yarnrc.yml  Caddyfile  Dockerfile  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.mts
frontend/.docker/: Dockerfile
frontend/server/: index.mjs
frontend/src/: App.tsx  vite-env.d.ts
helm/conservation-tool/: Chart.yaml  values-dev.yaml  values-dev.yml  values-prod.yaml  values-prod.yml  values-test.yaml  values-test.yml  values.yaml
helm/scripts/: README.md  setup-openshift-secrets.sh
workflows/: .dockerignore  .gitignore  Dockerfile.deploy  Dockerfile.server  Dockerfile.worker  prefect.yaml  pyproject.toml
workflows/.docker/: Dockerfile.server
workflows/scripts/: tifs_to_zarr.py
workflows/src/: setup.sh
workflows/src/flows/: strict_optimization.py  tile.py
workflows/src/tasks/: strict_optimization.py
workflows/src/utils/: object_store.py
(+405 files in other folders)
